RESOLVED FIXED124294
HTMLMediaElement should not throw an exception from setCurrentTime or fastSeek.
https://bugs.webkit.org/show_bug.cgi?id=124294
Summary HTMLMediaElement should not throw an exception from setCurrentTime or fastSeek.
Jer Noble
Reported 2013-11-13 11:10:55 PST
HTMLMediaElement should not throw an exception from setCurrentTime or fastSeek.
Attachments
Patch (27.48 KB, patch)
2013-11-13 11:21 PST, Jer Noble
eric.carlson: review+
buildbot: commit-queue-
Patch for landing (28.90 KB, patch)
2013-11-13 13:06 PST, Jer Noble
buildbot: commit-queue-
Archive of layout-test-results from webkit-ews-01 for mac-mountainlion (559.19 KB, application/zip)
2013-11-13 13:27 PST, Build Bot
no flags
Archive of layout-test-results from webkit-ews-12 for mac-mountainlion-wk2 (449.32 KB, application/zip)
2013-11-13 14:13 PST, Build Bot
no flags
Archive of layout-test-results from webkit-ews-10 for mac-mountainlion-wk2 (450.87 KB, application/zip)
2013-11-13 14:24 PST, Build Bot
no flags
Archive of layout-test-results from webkit-ews-04 for mac-mountainlion (492.90 KB, application/zip)
2013-11-13 14:35 PST, Build Bot
no flags
Archive of layout-test-results from webkit-ews-14 for mac-mountainlion-wk2 (498.90 KB, application/zip)
2013-11-13 14:58 PST, Build Bot
no flags
Jer Noble
Comment 1 2013-11-13 11:21:02 PST
Eric Carlson
Comment 2 2013-11-13 11:24:42 PST
Comment on attachment 216823 [details] Patch Thanks!
Build Bot
Comment 3 2013-11-13 12:04:07 PST
Jer Noble
Comment 4 2013-11-13 13:06:27 PST
Created attachment 216846 [details] Patch for landing
Build Bot
Comment 5 2013-11-13 13:27:17 PST
Comment on attachment 216823 [details] Patch Attachment 216823 [details] did not pass mac-ews (mac): Output: http://webkit-queues.appspot.com/results/22869151 New failing tests: media/video-fast-seek.html
Build Bot
Comment 6 2013-11-13 13:27:20 PST
Created attachment 216847 [details] Archive of layout-test-results from webkit-ews-01 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-01 Port: mac-mountainlion Platform: Mac OS X 10.8.5
Jer Noble
Comment 7 2013-11-13 13:42:24 PST
That new test (that I wrote) is flakey: https://bugs.webkit.org/show_bug.cgi?id=124298
Build Bot
Comment 8 2013-11-13 14:12:57 PST
Comment on attachment 216846 [details] Patch for landing Attachment 216846 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/22938848 New failing tests: media/video-fast-seek.html
Build Bot
Comment 9 2013-11-13 14:13:01 PST
Created attachment 216854 [details] Archive of layout-test-results from webkit-ews-12 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-12 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Build Bot
Comment 10 2013-11-13 14:24:14 PST
Comment on attachment 216823 [details] Patch Attachment 216823 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/22869169 New failing tests: media/video-fast-seek.html
Build Bot
Comment 11 2013-11-13 14:24:17 PST
Created attachment 216859 [details] Archive of layout-test-results from webkit-ews-10 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-10 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Build Bot
Comment 12 2013-11-13 14:35:21 PST
Comment on attachment 216846 [details] Patch for landing Attachment 216846 [details] did not pass mac-ews (mac): Output: http://webkit-queues.appspot.com/results/22749945 New failing tests: media/video-fast-seek.html
Build Bot
Comment 13 2013-11-13 14:35:24 PST
Created attachment 216865 [details] Archive of layout-test-results from webkit-ews-04 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-04 Port: mac-mountainlion Platform: Mac OS X 10.8.5
Build Bot
Comment 14 2013-11-13 14:58:10 PST
Comment on attachment 216823 [details] Patch Attachment 216823 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/22540057 New failing tests: media/video-fast-seek.html
Build Bot
Comment 15 2013-11-13 14:58:13 PST
Created attachment 216868 [details] Archive of layout-test-results from webkit-ews-14 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-14 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Jer Noble
Comment 16 2013-11-15 15:36:44 PST
Note You need to log in before you can comment on or make changes to this bug.